<resources>
    <string name="app_name">TrekNation</string>
    <string name="overview_short_description">You can become a Permanent Resident (PR) of Canada through the Express Entry system which has three programs Federal Skilled Worker (FSW), Canadian Experience Class (CEC) and Federal Skilled Trades (FST).</string>
    <string name="noc_short_desc">NOC stands for National Occupation Classification. It helps to determine your job code. There are 5 types of NOC groups: NOC 0, A, B, C and D.</string>
    <string name="eca_short_desc">An educational credential assessment (ECA) is used to verify that your foreign degree, diploma, or certificate (or other proof of your credential) is valid and equal to a Canadian one. You would need an ECA only if you have a non-Canadian degree and must be issued for Immigration purposes.</string>
    <string name="language_short_desc">In this step, you will be required to take a language test in English and/or French and score a number of points to be eligible for Express Entry programs.</string>
    <string name="eligibility_short_desc">In order to qualify for Express Entry for one of the three programs, you must meet the minimum requirements. Check the details to learn more about these requirements.</string>
    <string name="crs_short_desc">CRS Score is the score used by IRCC to rank candidates in the Express Entry pool. You can check your CRS score through the link in details.</string>
    <string name="pool_short_desc">In this step, you will now create your IRCC secure account and get into the pool of applicants for your EE program.</string>
    <string name="ita_short_desc">Once you have created your online profile you would need to wait for an ITA (Invitation to Apply). You will get an invite if your CRS score is greater than or equal to the cut-off of the draw.</string>
    <string name="checklist_short_desc">Once you get the ITA and fill out the post-ITA application forms, a personalized document checklist will be generated for your profile. You will have 60 days to gather all documents and upload the scanned copies.</string>
    <string name="fees_short_desc">Once you fill out the online form and upload the documents in the last step, you will be shown fees you need to pay for your e-APR (Electronic Application for Permanent Residence).</string>
    <string name="ppr_short_desc">After submitting your e-APR, you will receive an Acknowledgement of Receipt (AOR). This is the AOR date and is the date from when your 6 months intended processing time begins. Once IRCC has reviewed your biometrics, background checks, and medical examinations evaluations you will get a golden email for Passport Request (PPR).</string>
    <string name="landing_short_desc">Congratulations!! now that you have received your CoPR you are just one step away from getting your PR card. The next steps will depend on whether you are inside or outside of Canada.</string>
    <string name="clear">clear</string>
    <string name="overview_long_description">
         &lt;b>What is Express Entry?&lt;/b>&lt;br /&gt;
        &lt;br /&gt;
        Express Entry (EE) is an online immigration system which allows people to submit a profile and be considered as a skilled immigrant. Candidates with the highest rankings are invited to apply for permanent residency.&lt;br /&gt;
        &lt;br /&gt;
        &lt;b>How does Express Entry Work?&lt;/b>&lt;br /&gt;
        &lt;br /&gt;
        1. Express Entry works by submitting an online profile for determining eligibility for the one of the below programs:&lt;br /&gt;
        &lt;br /&gt;
        	•  Federal Skilled Worker (FSW)&lt;br /&gt;
            •  Canadian Experience Class (CEC)&lt;br /&gt;
            •  Federal Skilled Trades (FST)&lt;br /&gt;
        &lt;br /&gt;
        2. You can enter details about your age, education, work experience and language score to gain CRS(Comprehensive Ranking System) score.&lt;br /&gt;
        &lt;br /&gt;
        3. You are then placed in the Express Entry pool and ranked relative to each other based on your CRS score.&lt;br /&gt;
        &lt;br /&gt;
        4. You will be invited to apply for the permanent residence if your score is above the cut off score for that draw. This invitation is also called Invitation to Apply(ITA). A draw is conducted generally twice a month.&lt;br /&gt;
        &lt;br /&gt;
        &lt;b>How much does Express Entry cost?&lt;/b> &lt;br /&gt;
        &lt;br /&gt;
        Express Entry generally costs $1325 CAD. There is an additional cost of $1325 CAD if your application has a spouse. There is also a fee of $225 CAD per dependent child in the application. This is just the fee charged by IRCC and there are other costs as well associated with education verification, language test, medical test and police verification which you will find in relevant sections.&lt;br /&gt;
        &lt;br /&gt;
        &lt;b>How long does it take?&lt;/b> &lt;br /&gt;
        &lt;br /&gt;
        It usually takes 6 months after you receive your ITA.&lt;br /&gt;
        &lt;br /&gt;
        It may take additional time for other processes such as educational document verification, police verification, medical test and language test. These processes can take up to an additional 9 weeks. We suggest you visit this link and check your processing time - &lt;a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-processing-times.html">here&lt;//a>.&lt;br /&gt;
    </string>
    <string name="noc_long_description">
        For immigration purposes, the main job groups are:&lt;br /&gt;
        &lt;br /&gt;
        &lt;b>• Skill Type 0:&lt;/b> Management jobs, such as restaurant managers, mine managers, shore captains (fishing), etc.&lt;br /&gt;
        &lt;br /&gt;
        &lt;b>• Skill Type A:&lt;/b> Professional jobs that usually call for a degree from a university, such as doctors, dentists, architects, etc.&lt;br /&gt;
        &lt;br /&gt;
        &lt;b>• Skill Type B:&lt;/b> Technical jobs and skilled trades that usually call for a college diploma or training as an apprentice, such as chefs, plumbers, electricians, etc.&lt;br /&gt;
        &lt;br /&gt;
        &lt;b>• Skill Type C:&lt;/b> Intermediate jobs that usually call for high school and/or job-specific training, such as industrial butchers, long-haul truck drivers, food and beverage servers, etc.&lt;br /&gt;
        &lt;br /&gt;
        &lt;b>• Skill Type D:&lt;/b> Labour jobs that usually give on-the-job training, such as fruit pickers, cleaning staff, oil field workers, etc.&lt;br /&gt;
        &lt;br /&gt;
        If you are applying for Express Entry, your job and the work you have done in the past must be &lt;b>Skill Type 0 or level A or B.&lt;/b> &lt;br /&gt;
        &lt;br /&gt;
        You can use &lt;a href="https://noc.esdc.gc.ca/Home/Welcome/4f6368c7a3b44140bc06c177bfebbaa0?GoCTemplateCulture=en-CA">this&lt;//a> site for finding your correct NOC code.&lt;br /&gt;
        &lt;br /&gt;
        Another option would be to use the &lt;a href="https://noc.esdc.gc.ca/Home/Welcome/4f6368c7a3b44140bc06c177bfebbaa0?GoCTemplateCulture=en-CA">Job Bank&lt;//a> website. Find a job opening that matches your current job (or any previous job) and whose job duties match yours. On the job opening page, you can find the corresponding NOC code in the \"Job Market Information\" page.&lt;br /&gt;
    </string>
    <string name="permanent_address_process">Have you started your Canadian Permanent Residence process?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="created_profile">Created Profile</string>
    <string name="received_ita">Received ITA</string>
    <string name="submitted_docs">Submitted Docs</string>
    <string name="landing_procedures">Landing Procedures</string>
    <string name="education">Education</string>
    <string name="outside_canada_edu">Overall Education</string>
    <string name="secondary_high_school">Secondary High School</string>
    <string name="_1_or_2_year_degree_or_diploma">One or two year diploma or certificate</string>
    <string name="inside_canada_edu">Canadian Education</string>
    <string name="less_than_secondary_school_high_school">Less than secondary school (high school)</string>
    <string name="secondary_diploma_high_school_graduation">Secondary diploma (high school graduation)</string>
    <string name="one_year_degree_diploma_or_certificate_from_a_university_college_trade_or_technical_school_or_other_institute">One-year degree, diploma or certificate from a university, college, trade or technical school, or other institute</string>
    <string name="two_year_program_at_a_university_college_trade_or_technical_school_or_other_institute">Two-year program at a university, college, trade or technical school, or other institute</string>
    <string name="bachelor_s_degree_or_a_three_or_more_year_program_at_a_university_college_trade_or_technical_school_or_other_institute">Bachelor\'s degree OR a three or more year program at a university, college, trade or technical school, or other institute</string>
    <string name="two_or_more_certificates_diplomas_or_degrees_one_must_be_for_a_program_of_three_or_more_years">Two or more certificates, diplomas, or degrees. One must be for a program of three or more years</string>
    <string name="master_s_degree_or_professional_degree_needed_to_practice_in_a_licensed_profession_for_professional_degree_the_degree_program_must_have_been_in_medicine_veterinary_medicine_dentistry_optometry_law_chiropractic_medicine_or_pharmacy">Master\'s degree, OR professional degree needed to practice in a licensed profession (For “professional degree,” the degree program must have been in: medicine, veterinary medicine, dentistry, optometry, law, chiropractic medicine, or pharmacy.)</string>
    <string name="doctoral_level_university_degree_ph_d">Doctoral level university degree (Ph.D.)</string>
    <string name="degree_diploma_or_certificate_of_three_years_or_longer">Degree, diploma or certificate of 3 years or longer or a Master’s profession or Doctoral degree of at least 1 academic year</string>
    <string name="_0">0</string>
    <string name="calculate_crs_score">Calculate CRS Score</string>
</resources>